@@ -25,8 +25,8 @@
 	}
 	
 	## we supply our own JavaGD class
-	#.setenv <- if (exists("Sys.setenv")) Sys.setenv else Sys.putenv
-	#.setenv("JAVAGD_CLASS_NAME"="org/mutoss/gui/JavaGD")  
+	.setenv <- if (exists("Sys.setenv")) Sys.setenv else Sys.putenv
+	.setenv("JAVAGD_CLASS_NAME"="org/mutoss/gui/JavaGD")  
 	
 	# Optional Deducer integration:
 	if(exists(".deducer")) {
